--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="second fragment" />
+    <GridView
+        android:id="@+id/gridview"
+        android:numColumns="5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></GridView>
 </RelativeLayout>
