--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
-        android:background="@color/red">
+        android:background="@color/white">
 
         <mr_immortalz.com.lazefragment.ViewPagerIndicator
             android:id="@+id/indicator"
-            android:layout_width="250dp"
+            android:layout_width="180dp"
             android:layout_height="36dp"></mr_immortalz.com.lazefragment.ViewPagerIndicator>
     </LinearLayout>
 
